--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ a {
 .header{
     background-color: #f1f1f1;
     padding: 0.8rem 20px;
-    text-align: center;
+    display: flex;
 }
 
 .header01{
