--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,78 @@ a {
     text-decoration: none;
 }
 
-.header{
+.header {
     background-color: #f1f1f1;
-    padding: 0.8rem 20px;
+    padding:  0.8rem 20px;
     display: flex;
 }
 
-.header01{
-   padding: 30px;
+.header a {
+    color: black;
+    padding: 20px;
+    text-decoration: none;
+    align-items:center;
+    font-size: 1.25rem;
+    justify-content: space-around;
+}
+
+.header01 {
+    margin-top: 10px;
+    margin-right: 68%;
+}
+
+.header a:hover {
+    background-color: #ddd;
+    color: black;
+    border-radius: 10px;
+}
+
+.header a.active {
+    background-color: rgb(20, 20, 20);
+    color: #f1f1f1;
+    border-radius: 10px;
+    margin-right: 5px;
+}
+
+.dropbtn {
+    margin-top: 5px;
+    background-color: #f1f1f1;
+    color: rgb(0, 0, 0);
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    font-size: 1.25rem;
+}
+  
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 10px;
+}
+  
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border-radius: 10px;
+}
+  
+.dropdown-content a:hover {
+    background-color: #000000;
+    color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
