--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ a {
     color: black;
     text-decoration: none;
 }
-
+/******************** header ********************/
 .header {
     background-color: #f1f1f1;
     padding:  0.8rem 20px;
@@ -85,3 +85,80 @@ a {
 .dropdown:hover .dropdown-content {
     display: block;
 }
+/******************** header ********************/
+
+/******************** slider ********************/
+.container{
+    margin: 0;
+    margin-top: 3%;
+    padding: 0;
+    height: 84.5vh;
+    display: flex;
+    justify-content: center;
+    background: white;
+}
+
+.slide-a {
+    width: 1350px;
+    height: 700px;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.slide-b {
+    width: 500%;
+    height: 500px;
+    display: flex;
+}
+
+.slide-b input {
+    display: none;
+}
+
+.slide {
+    width: 20%;
+    transition: 2s;
+}
+
+.slide img {
+    width: 1350px;
+    height: 700px;
+}
+
+.navigation-manual {
+    position: absolute;
+    width: 1350px;
+    margin-top: 150px;
+    display: flex;
+    justify-content: center;
+}
+
+.manual-btn {
+    border: 2px solid rgb(255, 255, 255);
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+    margin: 0 auto;
+}
+
+.manual-btn:not(:last-child){
+    margin-right: -300px;
+}
+
+.manual-btn:hover {
+    background: rgb(255, 255, 255);
+}
+
+#radio1:checked ~ .first {
+    margin-left: 0;
+}
+
+#radio2:checked ~ .first {
+    margin-left: -20%;
+}
+
+#radio3:checked ~ .first {
+    margin-left: -40%;
+}
+/******************** slider ********************/
