เพิ่มเยอะเลยจำไม่ได้แต่หน้าเรื่องการเคลื่อนที่เสร้จละ

--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,14 @@ a {
     display: flex;
 }
 
+.container-03 {
+    margin-top: 5%;
+    margin-bottom: 2%;
+    margin-left: 31%;
+    margin-right: 35%;
+    display: flex;
+}
+
 /**
 .border-01 {
     width: 48%;
