--- a/css/style.css
+++ b/css/style.css
@@ -183,26 +183,14 @@ a {
 .container-03 {
     margin-top: 5%;
     margin-bottom: 2%;
-    margin-left: 31%;
-    margin-right: 35%;
-    display: flex;
+    margin-left: 30%;
+    margin-right: 30%;
 }
 
-/**
-.border-01 {
-    width: 48%;
-    border-radius: 10px;
-    border: 2px solid black;
-    padding: 3%;
+.container-03 h2 {
+    margin-left: 30%;
+    margin-right: 30%;
 }
-
-.border-02 {
-    width: 100%;
-    border-radius: 10px;
-    border: 2px solid black;
-    padding: 3%;
-}
-**/
 /******************** content ********************/
 /******************** footer ********************/
 
